campaign-kit-templates/src/olympus/assets/css/next-core.css
/* ... */
.os-card__banner-cont.os--align-center {
  justify-content: center;
  align-items: center;
}


.os-cards__grid {
  grid-column-gap: .75rem;
  grid-row-gap: .75rem;
  flex-flow: column;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  display: grid;
  position: static;
}

.os-cards__grid.os--two {
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  display: grid;
}

.os-cards__grid.os--three {
  grid-template-columns: 1fr 1fr 1fr;
}

.os--badge {
  color: #000;
  text-transform: uppercase;
  border: 1px solid #000;
  border-radius: 4px;
  justify-content: center;
  align-items: center;
  padding: 6px 8px;
  font-size: .925rem;
  font-weight: 700;
  display: flex;
}



.badge {
  border-radius: var(--radius-size--sm);
  color: #fff;
  background-color: #000;
  font-weight: 500;
}

.coupon-button {
  border: 2px solid var(--brand--color--cta-primary);
  border-radius: var(--radius--input);
  background-color: var(--brand--color--cta-primary);
  color: var(--brand--color--text-inverse);
  text-align: center;
  justify-content: center;
  align-items: center;
  padding-left: 2rem;
  padding-right: 2rem;
  font-weight: 600;
  text-decoration: none;
  transition: background-color .12s, border .12s;
  display: flex;
  position: relative;
}

.coupon-button.os--inactive {
  color: #818181;
  background-color: #e6e6e6;
  border-color: #e6e6e6;
}

.coupon-button.next-disabled {
  pointer-events: none;
  color: #818181;
  background-color: #e6e6e6;
  border-color: #e6e6e6;
}

.coupon-form__row {
  grid-column-gap: .5rem;
  grid-row-gap: .5rem;
  display: flex;
}

.submit-button {
  border: 2px solid var(--brand--color--cta-primary);
  border-radius: var(--radius--button);
  background-color: var(--brand--color--cta-primary);
  color: var(--brand--color--text-inverse);
  text-align: center;
  justify-content: center;
  align-items: center;
  width: 100%;
  min-height: 5rem;
  padding: 1rem 2rem;
  font-weight: 600;
  text-decoration: none;
  transition: background-color .12s, border .12s;
  display: flex;
  position: relative;
}

.submit-button.cc-shop__three {
  min-height: 4.5rem;
}

.submit-button__content {
  border-radius: 3px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-top: 0;
  font-weight: 700;
  line-height: 1;
  text-decoration: none;
  display: flex;
  position: relative;
}

.spinner {
  width: 1rem;
}

.os-card__image-slot {
  border-radius: var(--radius-size--sm);
  background-color: var(--brand--color--primary-light);
  outline-offset: 0px;
  border: 1px #000;
  outline: 3px #1a161f;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
}

.os-card__image-slot.cc-full {
  aspect-ratio: 1;
  width: 100%;
  height: 100%;
}


.checkout_mbg {
  width: 80px;
  height: 80px;
}

.checkout_mbg.cc-lg {
  width: 100px;
  height: 100px;
}

.section_header {
  z-index: 20;
  width: 100%;
  position: relative;
}

.announcement {
  color: #000;
}

.announcement__block {
  grid-column-gap: 12px;
  grid-row-gap: 12px;
  background-color: var(--brand--color--primary);
  justify-content: center;
  align-items: center;
  padding-top: 10px;
  padding-bottom: 10px;
  display: flex;
}

.announcement__text {
  color: #fff;
  text-align: center;
  letter-spacing: 0;
  text-transform: uppercase;
  justify-content: center;
  align-items: center;
  font-size: var(--font-size--lg);
  font-weight: 900;
  line-height: 2rem;
  display: block;
}

.announcement__promo-label {
  font-weight: 400;
}

.announcement__code-wrapper {
  background-color: #ffffff30;
  border-radius: 8px;
  padding: 2px 9px;
}

.announcement__code {
  color: #fff;
  text-align: center;
  font-weight: 700;
}

.security-banner__icon {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 1.25rem;
  height: 1.25rem;
  display: flex;
}

.order-totals__value.ts-lg.tw-600.cc-disc {
  color: #e44613;
}

.order-totals__label-group {
  grid-column-gap: .25rem;
  grid-row-gap: .25rem;
  align-items: center;
  display: flex;
}

.coupon-tag__summary {
  grid-column-gap: .25rem;
  grid-row-gap: .25rem;
  color: #686868;
  border-radius: .25rem;
  justify-content: center;
  align-items: center;
  width: auto;
  padding: 0;
  font-size: .785rem;
  line-height: 1.2;
  display: flex;
}

.order-totals__value-group {
  grid-column-gap: .25rem;
  grid-row-gap: .25rem;
  align-items: center;
  display: flex;
}

.order-totals__savings {
  color: #000;
  justify-content: space-between;
  display: flex;
}

.order-totals__savings-content {
  grid-column-gap: .25rem;
  grid-row-gap: .25rem;
  align-items: center;
  display: flex;
}

.order-totals__savings-icon {
  justify-content: center;
  align-items: center;
  width: 1rem;
  height: 1rem;
  font-size: var(--font-size--sm);
  display: flex;
}



.icon-wrap {
  color: #000;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 1.25rem;
  min-width: 1.25rem;
  height: 1.25rem;
  min-height: 1.25rem;
  display: flex;
}

.icon-wrap--lg {
  width: 2rem;
  min-width: 2rem;
  height: auto;
  min-height: auto;
}

.review_stars-wrap {
  color: var(--brand--color--rating-star);
  align-items: center;
  display: flex;
}

.order-title-wrapper {
  grid-column-gap: .25rem;
  grid-row-gap: .25rem;
  flex-flow: column;
  display: flex;
  position: relative;
}

.order-title-wrapper.cc-padded {
  border-bottom: .5px solid #eee;
  padding-bottom: 1rem;
}


.order-form__wrapper {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  flex-flow: column;
  display: flex;
  position: relative;
}

.order-form__review {
  position: relative;
}

.order-form__selection, .package-options {
  grid-column-gap: .5rem;
  grid-row-gap: .5rem;
  flex-flow: column;
  display: flex;
  position: relative;
}


.order-form__cta {
  grid-column-gap: .5rem;
  grid-row-gap: .5rem;
  flex-flow: column;
  display: flex;
  position: relative;
}
/* ... */

